<resources>
    <string name="app_name">Movie</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="movie_image">movie_image</string>
    <string name="back_move">Back</string>
    <string name="rating_pg_13">13+</string>
    <string name="tagline_text">Action, Adventure, Fantasy</string>
    <string name="text_count_reviews">125 reviews</string>
    <string name="text_storyline_title">Storyline</string>
    <string name="text_movie_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="text_actors_cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="image_movie_card">image_movie_card</string>
    <string name="icon_movie_like">icon movie like</string>
    <string name="avengers_end_game_movie_card">Avengers: End Game</string>
    <string name="text_movie_duration">137 min</string>

</resources>